# C.R.A-sion

./: .gitignore  Makefile  README.md  pyproject.toml  use-cases.md
doc/: .useless
src/api/: .env  README.md  bot.py  crasion.py  main.py
src/api/j2l/pyanalytx/: debug.py  exception.py  logger.py  test.py
src/api/j2l/pychromatx/: converter.py
src/api/j2l/pymusx/: converter.py
src/api/j2l/pyrobotx/: client.py  robot.py
src/api/j2l/pytactx/: agent.py
src/server/: main.py
